--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* todos respeitam a sua regra */
 
-  @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800&display=swap');
+
 
 
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto Slab', serif;
 }
@@ -127,8 +127,6 @@ footer {
     font-size: 1.188rem;
 }
 
-
-
 #buttoncarrinho:hover {
     background-color: transparent;
     color: rgb(3%, 60.3%, 0%);
@@ -216,8 +214,8 @@ ul:hover a:hover {
 }
 
 .buttondescription {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 /* alteração interna do button*/
@@ -228,7 +226,6 @@ ul:hover a:hover {
     background-color: black;
     color: #fff;
     cursor: pointer;
-    /* Altera o cursor para uma mão ao passar o mouse */
     transition: background-color 0.3s ease;
 }
 
@@ -236,14 +233,30 @@ ul:hover a:hover {
     background-color: green;
 }
 
+.buttonremove {
+    border-radius: 6rem;
+    width: 6rem;
+    height: 2rem;
+    background-color: black;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.buttonremove:hover {
+    background-color: red;
+}
+
 
 /* Estlização das imagens */
+/* parte nova */
 
 img.imageChange {
     border-radius: 2rem;
 
 }
-.login-modal{
+
+.login-modal {
     display: none;
     position: absolute;
     box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem black;
@@ -252,69 +265,72 @@ img.imageChange {
     height: 40rem;
     padding-top: 2rem;
     animation: animation .3s linear forwards;
-    
 
-    > #conteudo {
+
+    >#conteudo {
         margin-top: 1rem;
-    
+
         >h1 {
             text-align: center;
         }
 
-        > form {
+        >form {
             display: flex;
             flex-direction: column;
             padding-inline: 2rem;
             margin-top: 1rem;
             gap: 1rem;
-            
-            > p {
+
+            >p {
                 font-size: 1.2rem;
                 font-weight: 600;
             }
 
-            >input{
+            >input {
                 border: 1px solid rgba(128, 128, 128, 0.46);
                 padding: 0.7rem 1rem;
                 outline: none;
                 font-size: 1rem;
             }
 
-            > button {
-                border: none;
+            >button {
+                border-radius: 1rem;
                 padding-block: .8rem;
                 font-size: 1rem;
-                background-color: ;
+                
             }
-            
+
         }
     }
-  
-    > img {
-      position: absolute;
-      top: .5rem;
-      right: .5rem;
-      width: 1.2rem;
-      cursor: pointer;
+
+    >img {
+        position: absolute;
+        top: .5rem;
+        right: .5rem;
+        width: 1.2rem;
+        cursor: pointer;
     }
 
 }
-.login-modal.active{
+
+.login-modal.active {
     display: block;
 }
+
 @keyframes animation {
-    0%{
+    0% {
         opacity: 0;
         right: -10rem;
         transform: scale(0.5);
-        
+
     }
-    100%{
-    opacity: 1;
-    transform: scale(1);
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
 
 
-    right: 0;
-    
+        right: 0;
+
     }
 }
