--- a/views/Cart/forms.html
+++ b/views/Cart/forms.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html>
-
-  <head>
-    <title>Página Principal</title>
-    <link rel="stylesheet" href="forms.css"
- </head>
-
- <body>
-     <div id="conteudo">
-         <img src="/ex1/img/LOGO3.jpg" class="avatar">
-         <h1>Logar aqui</h1>
-          <form>
-             <p>Usuário</p>
-             <input type="text" name="usuario" placeholder="Entre com o Usuário">
-             <p>Senha</p>
-             <input type="password" name="senha" placeholder="Entre com o senha">
-             <input type="submit" name="submit" value="Login">
-             <a href="#">Esqueci a senha</a>
-          </form>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+</head>
+<body>
+   <div class="login-modal">
+      <div id="conteudo">
+        <img src="./img/LOGO3.jpg" class="avatar">
+        <h1>Logar aqui</h1>
+         <form>
+            <p>Usuário</p>
+            <input type="text" name="usuario" placeholder="Entre com o Usuário">
+            <p>Senha</p>
+            <input type="password" name="senha" placeholder="Entre com o senha">
+            <button type="submit">Login</button>
+            <a href="#">Esqueci a senha</a>
+         </form>
      </div>
-     <script src="login.js"></script>
-  </body>
-
+     <img src="img/x.svg" alt="" class="close-menu">
+    </div>
+</body>
 </html>
